--- a/views/layout.html
+++ b/views/layout.html
@@ -25,7 +25,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{{=URL('default', 'index')}}">JobShare</a>
+        <a id="jobShareLink" class="navbar-brand" href="{{=URL('default', 'index', vars=dict(public='true'))}}">JobShare</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
